--- a/configs/raspberrypi_defconfig
+++ b/configs/raspberrypi_defconfig
@@ -35,3 +35,4 @@ BR2_TARGET_ROOTFS_EXT2_SIZE="120M"
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/raspberrypi/post-image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="--add-vc4-fkms-v3d-overlay"
