--- a/package/Config.in
+++ b/package/Config.in
@@ -2477,4 +2477,8 @@ menu "Text editors and viewers"
 	source "package/vim/Config.in"
 endmenu
 
+menu "App user"
+	source "package/weston-service/Config.in"
+endmenu
+
 endmenu
