add kf5 support

--- a/configs/raspberrypi4_64_defconfig
+++ b/configs/raspberrypi4_64_defconfig
@@ -33,10 +33,7 @@ BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_FONT_AWESOME=y
 BR2_PACKAGE_LIBERATION=y
 BR2_PACKAGE_GLMARK2=y
-BR2_PACKAGE_KMSCUBE=y
-BR2_PACKAGE_MESA3D_DEMOS=y
 BR2_PACKAGE_MESA3D=y
-BR2_PACKAGE_MESA3D_LLVM=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_KMSRO=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_SWRAST=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_V3D=y
@@ -51,13 +48,15 @@ BR2_PACKAGE_QT5BASE_HARFBUZZ=y
 BR2_PACKAGE_QT5BASE_GIF=y
 BR2_PACKAGE_QT5BASE_JPEG=y
 BR2_PACKAGE_QT5BASE_PNG=y
-BR2_PACKAGE_QT5BASE_DBUS=y
 BR2_PACKAGE_QT5CHARTS=y
 BR2_PACKAGE_QT5MULTIMEDIA=y
 BR2_PACKAGE_QT5QUICKCONTROLS=y
 BR2_PACKAGE_QT5QUICKCONTROLS2=y
 BR2_PACKAGE_QT5SERIALPORT=y
 BR2_PACKAGE_QT5WAYLAND=y
+BR2_PACKAGE_KF5=y
+BR2_PACKAGE_KF5_KCOREADDONS=y
+BR2_PACKAGE_KF5_NETWORKMANAGER_QT=y
 BR2_PACKAGE_WESTON_DEFAULT_DRM=y
 BR2_PACKAGE_WESTON_DEMO_CLIENTS=y
 BR2_PACKAGE_RPI_BT_FIRMWARE=y
@@ -65,6 +64,10 @@ BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI4=y
 BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
 BR2_PACKAGE_LINUX_PAM=y
+BR2_PACKAGE_LLVM=y
+BR2_PACKAGE_NETWORK_MANAGER=y
+BR2_PACKAGE_NETWORK_MANAGER_TUI=y
+BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_WESTON_SERVICE=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
