Add rsync application

--- a/configs/raspberrypi4_64_defconfig
+++ b/configs/raspberrypi4_64_defconfig
@@ -68,6 +68,7 @@ BR2_PACKAGE_LLVM=y
 BR2_PACKAGE_NETWORK_MANAGER=y
 BR2_PACKAGE_NETWORK_MANAGER_TUI=y
 BR2_PACKAGE_OPENSSH=y
+BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_WESTON_SERVICE=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
